...
        "Disco Biscuits" to "DB",
        "Donna the Buffalo" to "DTB",
        "Drive-By Truckers" to "DBT",
        "Ekoostik Hookah" to "EH",
        "God Street Wine" to "GSW",
        "Gov't Mule" to "mule",
        "Grateful Dead" to "GD",
        "GreyBoy AllStars" to "GBA",
        "Jazz Mandolin Project" to "JMP",
        "Jerry Garcia Band" to "JGB",
        "Jerry Joseph & The Jackmormons" to "JJJ",
        "Jimi Hendrix Experience" to "JHE",
        "John Mayer Trio" to "JM3",
...
